Prevent SEO crawling

--- a/clickphase.weebly.com/animationsvideos.html
+++ b/clickphase.weebly.com/animationsvideos.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/animationsvideos.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:59 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>Animations/Videos - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="Animations/Videos" />
-<meta property="og:description" content="You can find all of my animations and videos on my 3 channels. ClickPhase - YouTube Matthias Wang - YouTube Granny the Great - YouTube ​" />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) Animations/Videos - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) Animations/Videos" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) You can find all of my animations and videos on my 3 channels. ClickPhase - YouTube Matthias Wang - YouTube Granny the Great - YouTube ​" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/white-logo429f.png?1610874736" />
 <meta property="og:url" content="animationsvideos.html" />
 
