--- a/clickphase.weebly.com/dynawin.html
+++ b/clickphase.weebly.com/dynawin.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/dynawin.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:53 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>DynaWin - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="DynaWin" />
-<meta property="og:description" content="DynaWin is a utility that allows the Windows desktop to change dynamically." />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) DynaWin - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) DynaWin" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) DynaWin is a utility that allows the Windows desktop to change dynamically." />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/icon-with-texte2db.png?1610877698" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/webimage1_orig.png" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/webimage2_orig.png" />
