--- a/clickphase.weebly.com/granny-keyboard.html
+++ b/clickphase.weebly.com/granny-keyboard.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/granny-keyboard.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:58 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>Granny Keyboard - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="Granny Keyboard" />
-<meta property="og:description" content="Granny Keyboard is an application that makes it so that whichever key you press, the word &#039;Granny&#039; will be added in front of it and a dialog box will pop up." />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) Granny Keyboard - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) Granny Keyboard" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) Granny Keyboard is an application that makes it so that whichever key you press, the word &#039;Granny&#039; will be added in front of it and a dialog box will pop up." />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/white-logo429f.png?1610874736" />
 <meta property="og:url" content="granny-keyboard.html" />
 
