--- a/clickphase.weebly.com/index.html
+++ b/clickphase.weebly.com/index.html
@@ -4,17 +4,18 @@
 <!-- Mirrored from clickphase.weebly.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:00:45 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>ClickPhase - Home</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="ClickPhase" />
-<meta property="og:description" content="Welcome to ClickPhase! Here, there is some cool software. Visit if you can!" />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) ClickPhase - Home</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) ClickPhase" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) Welcome to ClickPhase! Here, there is some cool software. Visit if you can!" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/editor/icon-with-text72f2.png?1610876510" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/editor/dynawinimage42ad.jpg?1608800258" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/launcherximagelight_orig.png" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/white-logo429f.png?1610874736" />
 <meta property="og:url" content="index.html" />
 
-<meta name="description" content="Welcome to ClickPhase! Here, there is some cool software. Visit if you can!" />
-<meta name="keywords" content="Microsoft, microsoft, windows, app, program, click, phase, software, launcher, launcherX, cool, cool apps, clickphase, granny keyboard, launcherx" />
+<meta name="description" content="This site is an archive of ClickPhase's old website, https://clickphase.weebly.com. 
+ClickPhase's official site is now located at https://clickphase.vercel.app." />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
