--- a/clickphase.weebly.com/p5js-paint-app.html
+++ b/clickphase.weebly.com/p5js-paint-app.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/p5js-paint-app.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:59 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>p5.js Paint App - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="p5.js Paint App" />
-<meta property="og:description" content="This is a paint app developed in p5.js by me." />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) p5.js Paint App - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) p5.js Paint App" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) This is a paint app developed in p5.js by me." />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/white-logo429f.png?1610874736" />
 <meta property="og:url" content="p5js-paint-app.html" />
 
