--- a/clickphase.weebly.com/aboutcontact.html
+++ b/clickphase.weebly.com/aboutcontact.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/aboutcontact.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:59 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>About/Contact - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="About/Contact" />
-<meta property="og:description" content="Hi! I am Matthias from ClickPhase, the only person here. I make software and animations during my free time and I hope you like using my software and watching my animations as much as I enjoy making..." />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) About/Contact - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) About/Contact" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) Hi! I am Matthias from ClickPhase, the only person here. I make software and animations during my free time and I hope you like using my software and watching my animations as much as I enjoy making..." />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/editor/white-logo440c.png?1610880007" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/white-logo429f.png?1610874736" />
 <meta property="og:url" content="aboutcontact.html" />
