--- a/clickphase.weebly.com/launcherx.html
+++ b/clickphase.weebly.com/launcherx.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/launcherx.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:53 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>LauncherX - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="LauncherX" />
-<meta property="og:description" content="LauncherX   is a Windows Program used to conveniently access all of your most-used files, folders, websites." />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) LauncherX - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) LauncherX" />
+<meta property="og:description" content="(OLD ARCHIVED SITE) LauncherX is a Windows Program used to conveniently access all of your most-used files, folders, websites." />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/published/logodarkc26a.png?1668225977" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/iconsweebly_orig.png" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/changeiconsizeweebly_orig.png" />
