--- a/clickphase.weebly.com/software.html
+++ b/clickphase.weebly.com/software.html
@@ -4,9 +4,10 @@
 <!-- Mirrored from clickphase.weebly.com/software.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 17 Nov 2022 16:02:48 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
-		<title>Software - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
-<meta property="og:title" content="Software" />
-<meta property="og:description" content=" Dynamic Desktop for Windows 10 and Windows 11​" />
+<meta name="robots" content="noindex, nofollow" />
+<title>(OLD ARCHIVED SITE) Software - ClickPhase</title><meta property="og:site_name" content="ClickPhase" />
+<meta property="og:title" content="(OLD ARCHIVED SITE) Software" />
+<meta property="og:description" content=" (OLD ARCHIVED SITE) Dynamic Desktop for Windows 10 and Windows 11​" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/editor/dynawinimage8808.jpg?1608808988" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/launcherximagelight_orig.png" />
 <meta property="og:image" content="uploads/1/1/8/2/118215050/grannykeyboardimage_orig.png" />
