Fix broken links in notice

--- a/clickphase.weebly.com/p5js-paint-app.html
+++ b/clickphase.weebly.com/p5js-paint-app.html
@@ -341,8 +341,8 @@
 		<button style="float: right; margin-top: 5px; margin-left: 10px;" onclick="hideNotice()">X</button>
 		<p style="color: white; margin: 0px !important;">This site is an archived version of ClickPhase's
 			old Weebly site, which was originally located at
-			<a>https://clickphase.weebly.com</a>. This site is therefore no longer being updated. To visit
-			ClickPhase's new official site, go to <a>https://clickphase.vercel.app</a>.
+			<a href="https://clickphase.weebly.com" rel="noopener">https://clickphase.weebly.com</a>. This site is therefore no longer being updated. To visit
+			ClickPhase's new official site, go to <a href="https://clickphase.vercel.app" rel="noopener">https://clickphase.vercel.app</a>.
 		</p>
 	</div>
 	
