--- a/clickphase.weebly.com/dynawin.html
+++ b/clickphase.weebly.com/dynawin.html
@@ -282,6 +282,7 @@
 		var STYLE_PREFIX = 'wsite';
 	</script>
 	<script src='cdn2.editmysite.com/js/jquery-1.8.3.min.js'></script>
+	<script defer src="/_vercel/insights/script.js"></script>
 
 	<script type="text/javascript" src="cdn2.editmysite.com/js/lang/en/stld565.js?buildTime=1668695285&amp;"></script>
 	<script src="cdn2.editmysite.com/js/site/mainb1ab.js?buildTime=1668695285"></script>
