Fix YouTube videos not loading in iframe

--- a/clickphase.weebly.com/dynawin.html
+++ b/clickphase.weebly.com/dynawin.html
@@ -508,7 +508,7 @@
 											class="wsite-youtube-wrapper wsite-youtube-size-hd wsite-youtube-align-center">
 											<div class="wsite-youtube-container">
 
-												<iframe src="http://www.youtube.com/embed/J0iyzZG5tXc?wmode=opaque"
+												<iframe src="https://www.youtube.com/embed/J0iyzZG5tXc"
 													frameborder="0" allowfullscreen></iframe>
 											</div>
 										</div>
