--- a/clickphase.weebly.com/granny-keyboard.html
+++ b/clickphase.weebly.com/granny-keyboard.html
@@ -506,7 +506,7 @@
 											class="wsite-youtube-wrapper wsite-youtube-size-hd wsite-youtube-align-center">
 											<div class="wsite-youtube-container">
 
-												<iframe src="http://www.youtube.com/embed/NdBmcblzhFA?wmode=opaque"
+												<iframe src="https://www.youtube.com/embed/NdBmcblzhFA"
 													frameborder="0" allowfullscreen></iframe>
 											</div>
 										</div>
