--- a/clickphase.weebly.com/launcherx.html
+++ b/clickphase.weebly.com/launcherx.html
@@ -513,7 +513,7 @@
 											class="wsite-youtube-wrapper wsite-youtube-size-hd wsite-youtube-align-center">
 											<div class="wsite-youtube-container">
 
-												<iframe src="http://www.youtube.com/embed/8qYBaD5-O0c?wmode=opaque"
+												<iframe src="https://www.youtube.com/embed/8qYBaD5-O0c"
 													frameborder="0" allowfullscreen></iframe>
 											</div>
 										</div>
