--- a/clickphase.weebly.com/launcherx.html
+++ b/clickphase.weebly.com/launcherx.html
@@ -764,8 +764,8 @@
 																</h2>
 
 																<div class="paragraph">
-																	<font color="#ffffff" size="4">LauncherX uses the
-																		XAML Islands Library in order
+																	<font color="#ffffff" size="4">LauncherX uses
+																		custom controls and styles in order
 																		to&nbsp;&#8203;have the look and feel of a
 																		modern Windows App with fluent design.</font>
 																</div>
